--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/loadingoverlay.min.js"></script>
-        <script src="./js/jquery.paging.min.js"></script>
+        <script src="./js/jquery.paging.js"></script>
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
         <link rel="stylesheet" href="./css/all.min.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
