--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/loadingoverlay.min.js"></script>
         <script src="./js/jquery.paging.js"></script>
+        <script src="./js/json-viewer.js"></script>
         <link rel="stylesheet" href="./css/bootstrap.min.css"/>
         <link rel="stylesheet" href="./css/all.min.css"/>
+        <link rel="stylesheet" href="./css/json-viewer.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
         <script src="./js/discord.js"></script>
         <script src="./js/main.js"></script>
         <script src="./js/server_list.js"></script>
+        <style id="cssBasePage"></style>
 
     </head>
 
