--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <body>
 
-        <div class="centerDiv py-3 bg-white" id="app">
+        <div class="centerDiv p-3 bg-white" id="app">
 
             <center>
                 <h2>Debug Discord.JS</h2>
