--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <input type="checkbox" class="form-check-input" id="remember_token">
                     <label class="form-check-label" for="remember_token">Remember Token</label>
                 </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="disable_debug">
+                    <label class="form-check-label" for="disable_debug">Disable Debug</label>
+                </div>
                 <button type="submit" id="start_discord" class="btn btn-primary">Login</button>
 
             </center>
